# OpenGL-Assignments

./: LICENSE  README.md
assignment-1/: .gitignore  CMakeLists.txt  README.md
assignment-1/code/: main.cpp
assignment-1/code/fileloader/: fileLoader.cpp  fileLoader.h
assignment-1/code/mesh/: mesh.cpp  mesh.h
assignment-1/code/robot/: robot.cpp  robot.h
assignment-1/code/shader/crosshair/: frag.glsl  vert.glsl
assignment-1/code/textureloader/: textureloader.cpp  textureloader.h
assignment-2/: .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini  project
assignment-2/code/: camera.h  main.cpp  model.h  shader.h
assignment-2/include/assimp/install/lib/pkgconfig/: assimp.pc
assignment-2/shaders/: post_processing.frag  scene.frag  scene.vert
assignment-3/: CMakeLists.txt  Makefile  README.md  imgui.ini  license
assignment-3/code/: camera.h  foliage_renderer.cpp  foliage_renderer.h  main.cpp  obj_loader.cpp  obj_loader.h  procedural_grid.cpp  procedural_grid.h  shader_code_loader.cpp  shader_code_loader.h  slime_character.cpp  slime_character.h  spatial_sample_loader.cpp  spatial_sample_loader.h  stb_image.cpp
assignment-3/shaders/: build_cmd.comp  foliage.frag  foliage.vert  foliage_cull.comp  frustum.frag  frustum.vert  grid.frag  grid.vert  slime.frag  slime.vert
